k8s/base/deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: musclecode-backend-execution-service
  annotations:
    image-sha: latest
spec:
  replicas: 1
  selector:
    matchLabels:
      app: musclecode-backend-execution-service
  template:
    metadata:
      labels:
        app: musclecode-backend-execution-service
    spec:
      imagePullSecrets:
        - name: registry-credentials-execution-service
      containers:
        - name: musclecode-backend-execution-service
          image: harbor.devostack.com/musclecode/musclecode-backend-execution-service:latest
          ports:
            - containerPort: 3000
              name: http
            - containerPort: 9229
              name: debug
          resources:
            limits:
              cpu: "1"
              memory: "1Gi"
            requests:
              cpu: "100m"
              memory: "128Mi"
          readinessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 5
            periodSeconds: 10
          livenessProbe:
            httpGet:
              path: /healthz
              port: 3000
            initialDelaySeconds: 15
            periodSeconds: 20
          securityContext:
            runAsUser: 1001
            runAsGroup: 1001
            runAsNonRoot: true
            readOnlyRootFilesystem: true
            allowPrivilegeEscalation: false
            capabilities:
              drop: ["ALL"]
          volumeMounts:
            - name: code-execution
              mountPath: /app/code
            - name: tmp
              mountPath: /tmp

      volumes:
        - name: code-execution
          emptyDir: {}
        - name: tmp
          emptyDir: {}
