k8s/base/service.yaml
apiVersion: v1
kind: Service
metadata:
  name: musclecode-backend-execution-service
  namespace: musclecode
spec:
  selector:
    app: musclecode-backend-execution-service
  ports:
    - protocol: TCP
      port: 80
      targetPort: 3000
      name: http
    - protocol: TCP
      port: 9229
      targetPort: 9229
      name: debug
  type: ClusterIP
