k8s/base/virtual-service.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: istio-musclecode-backend-execution-service-virtualservice
  namespace: musclecode-dev
spec:
  hosts:
  - "execution-service.api.musclecode.devostack.com"
  gateways:
  - istio-system/istio-https-gateway
  http:
  - match:
    - uri:
        prefix: /
    route:
    - destination:
        port:
          number: 80
        host: musclecode-backend-execution-service
    retries:
      attempts: 3
      perTryTimeout: 30s
    timeout: 30s
